--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,2 +1,23 @@
 en:
-  welcome: "Welcome!"
+    welcome: "Welcome!"
+    bookmarks:
+        add:
+            success: 'Successfully added bookmarks.'
+            failure:  'Sorry, there was a problem saving the bookmarks.'
+        remove:
+            success: 'Successfully removed bookmarks.'
+            failure: 'Sorry, there was a problem removing the bookmarks.'
+        clear:
+            success: "Successfully cleared bookmarks."
+            failure: 'Sorry, there was a problem clearing your bookmarks.'
+        need_login: 'Please log in to manage and view your bookmarks.'
+        
+    feedback:
+        valid_name: 'A valid name is required'
+        valid_email: 'A valid email address is required'
+        need_message: 'A message is required'
+        
+    folder:
+        add:
+            success: "%{params[:title] || 'Item'} successfully added to Folder"
+           
