--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,2 +1,97 @@
 en:
-  welcome: "Welcome!"
+    welcome: "Welcome!"
+    and: "and"
+    bookmarks:
+        add:
+            success: 'Successfully added bookmarks.'
+            failure:  'Sorry, there was a problem saving the bookmarks.'
+        remove:
+            success: 'Successfully removed bookmarks.'
+            failure: 'Sorry, there was a problem removing the bookmarks.'
+        clear:
+            success: "Successfully cleared bookmarks."
+            failure: 'Sorry, there was a problem clearing your bookmarks.'
+        need_login: 'Please log in to manage and view your bookmarks.'
+        
+    feedback:
+        valid_name: 'A valid name is required'
+        valid_email: 'A valid email address is required'
+        need_message: 'A message is required'
+        
+    folder:
+        title: "Selected Items"
+        add:
+            success: "%{title} successfully added to selected items"
+        remove:
+            success: "%{title} successfully removed from selected items"
+        clear:
+            success: "Selected items cleared."
+        tools:
+            cite: "Cite"
+            endnote: "Export to EndNote"
+            email: "Email"
+            clear: "Clear"
+            
+    
+    saved_searches:
+        add:
+            success: "Successfully saved your search."
+            failure: "There was a problem saving your search."
+        remove:
+            success: "Successfully removed your search."
+            failure: "There was a problem removing your search."
+        clear:
+            success: "Cleared your saved searches."
+            failure: "There was a problem clearing your searches."
+        need_login: "Please log in to manage and view your saved searches."
+        
+    search_history:
+        clear:
+            action_title: 'Clear Search History'
+            action_confirm: 'Clear your search history?'
+            success: "Cleared your search history."
+            failure: "There was a problem clearing your search history."
+        title: 'Search History'
+        no_history: 'You have no search history'
+        recent: ' Your recent searches'
+        
+    record_mailer:
+        item_record:
+            singular: 'Item Record'
+            plural: 'Item Records'
+
+    header_links:
+        login: 'Login'
+        logout: 'Log Out'
+        bookmarks: 'Your Bookmarks'
+        saved_searches: 'Saved Searches'
+        selected_items: 'Selected Items'
+        search_history: 'Search History'
+        
+    application_name: "Blacklight"
+    back_to_search: "Back to Search"
+    # Does Kaminari provide anything for us?
+    pagination:
+        previous: '« Previous'
+        next: 'Next »'
+        
+    search:
+        pagination_info:
+            no_items_found: "No %{entry_name} found"
+            single_item_found: "Displaying <b>1</b> %{entry_name}"
+            pages:
+                one: "Displaying <b>all %{total_num}</b> %{entry_name}"
+                other: "Displaying %{entry_name} <b>%{start_num} - %{end_num}</b> of <b>%{total_num}</b>"   
+        entry_pagination_info:
+            one: "Showing the only item from your search."
+            other: "Showing item <b>%{current} of %{total}</b> from your search."
+        
+        facets:
+            count: "(%{number})"
+            selected:
+                remove: "[remove]"
+        filters:
+            label: "%{label}:"
+    entry_name:
+      default: 'entry'
+
