--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -86,6 +86,7 @@ en:
         next: 'Next »'
         
     search:
+        title: "%{application_name} Search Results"
         per_page: 
             label: "Show %{select} per_page"
             title: "Number of results to display per page"
@@ -144,6 +145,9 @@ en:
         librarian_view:
             title: "Librarian View"
             leader: "LEADER %{leader}"
+        start_over: "start over"
+        show:
+            title: "%{document_title} - %{application_name}"
     entry_name:
       default: 'entry'
       
