fix i18n labels so all tests pass

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -88,7 +88,7 @@ en:
     search:
         title: "%{application_name} Search Results"
         per_page: 
-            label: "Show %{select} per_page"
+            label: "Show %{select} per page"
             title: "Number of results to display per page"
             submit: "update"
         sort: 
